[package]
name = "cities"
version = "0.1.0"
edition = "2021"

author = [ "Matthias and co." ]
# license = "MIT OR Apache-2.0"
# readme = "README.md"
repository = "https://github.com/matthcol/cities_lib_rust"
# documentation = "..."
# homepage = "..."
description = """
City lib
"""
keywords = ["city", "population"]
# categories = ["algorithms", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
